chore: Integrate AntDesign, with customizable less variables

--- a/src/components/card/card.module.less
+++ b/src/components/card/card.module.less
@@ -1,3 +1,5 @@
+@font-size: 3rem;
+
 .card {
   margin: 1rem;
   flex-basis: 45%;
@@ -20,7 +22,7 @@
 .card h3 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
-  color: red;
+  color: @warning-color;
 }
 
 .card p {
