feature: Add antd pro layout, customize button style

--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -10,7 +10,27 @@
 @text-color: rgba(0, 0, 0, 0.65); // major text color
 @text-color-secondary: rgba(0, 0, 0, 0.45); // secondary text color
 @disabled-color: rgba(0, 0, 0, 0.25); // disable state color
-@border-radius-base: 8px; // major border radius
+@border-radius-base: 6px; // major border radius
 @border-color-base: #d9d9d9; // major border color
 @box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08),
   0 9px 28px 8px rgba(0, 0, 0, 0.05); // major shadow for layers
+
+/*
+ * Blueprintjs
+ */
+@btn-shadow: inset 0 0 0 1px rgb(16 22 26 / 20%), inset 0 -1px 0 rgb(16 22 26 / 10%);
+@btn-primary-shadow: @btn-shadow;
+@btn-primary-bg: linear-gradient(180deg,hsla(0,0%,100%,.15),hsla(0,0%,100%,0)), @primary-7;
+@btn-primary-color: white;
+
+/*
+ * Evergreen js
+ */
+// @btn-shadow: rgb(67 90 111 / 30%) 0px 0px 0px 1px inset, rgb(67 90 111 / 6%) 0px -1px 1px 0px inset;
+// @btn-primary-shadow: @btn-shadow;
+// @btn-primary-bg: linear-gradient(@primary-6, @primary-7), white;
+// @btn-primary-color: white;
+// @btn-font-weight: 500;
+// @btn-font-size-lg: @font-size-base;
+// // @btn-line-height: 2;
+// @btn-height-lg: 56px;
